logs/validate.20260408-065957.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/StructChainedHashTable.rs:732:38
    |
732 | ...                   implies !#[trigger] table.table@[jj]
    |                                ^

error[E0425]: cannot find type `Node` in this scope
   --> src/Chap47/StructChainedHashTable.rs:947:76
    |
947 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Debug for Node<Key, Value> {
    |                                                                            ^^^^ not found in this scope

error[E0425]: cannot find type `Node` in this scope
   --> src/Chap47/StructChainedHashTable.rs:957:78
    |
957 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Display for Node<Key, Value> {
    |                                                                              ^^^^ not found in this scope

error[E0425]: cannot find type `ChainList` in this scope
   --> src/Chap47/StructChainedHashTable.rs:965:76
    |
965 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Debug for ChainList<Key, Value> {
    |                                                                            ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ChainList` in this scope
   --> src/Chap47/StructChainedHashTable.rs:973:78
    |
973 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Display for ChainList<Key, Value> {
    |                                                                              ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StructChainedHashTableStEph` in this scope
   --> src/Chap47/StructChainedHashTable.rs:981:30
    |
981 |     impl std::fmt::Debug for StructChainedHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StructChainedHashTableStEph` in this scope
   --> src/Chap47/StructChainedHashTable.rs:987:32
    |
987 |     impl std::fmt::Display for StructChainedHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 3626MB, peak z3 RSS: 410MB, min free: 22531MB
Sampled CPU Usage: rust_verify: 45s, z3 children: 21s
